--- a/TODOLIST/Views/_ViewImports.cshtml
+++ b/TODOLIST/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TODOLIST
 @using TODOLIST.Models
 @using TODOLIST.ViewModels
+@using Humanizer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
