--- a/TODOLIST/Views/Shared/_Layout.cshtml
+++ b/TODOLIST/Views/Shared/_Layout.cshtml
@@ -19,10 +19,10 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
+                    @await Html.PartialAsync("_LoginPartial")
+                    @await Html.PartialAsync("_AdminActionsPartial")
                     <ul class="navbar-nav flex-grow-1">
-                        <partial name="_MenuItems" />
-                        <partial name="_AdminActionsPartial" />
+                        @await Html.PartialAsync("_MenuItems")
                     </ul>
                 </div>
             </div>
